# server/openapi.yaml
@@ -762,6 +762,12 @@ paths:
             $ref: '#/components/schemas/GameStatus'
           required: false
           description: Filter games by status.
+        - in: query
+          name: username
+          schema:
+            type: string
+          required: false
+          description: The username of the requesting user (for friends-only rooms).
       responses:
         '200':
           description: Successfully retrieved list of games.
